crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__interface_with_newline_header.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "interface T exposes [] imports []\n\n"
---
(BeginFile
    (BeginHeaderInterface
        ModuleName=>UpperIdent@1
        (BeginCollection EndCollection)
        (BeginCollection EndCollection)
    EndHeaderInterface)
    (BeginTopLevelDecls EndTopLevelDecls)
EndFile)

[=== canfmt below ===]


[=== formatted below ===]

