crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__lambda_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "\\abc -> def"
---
(BeginTopLevelDecls
    HintExpr
    (BeginLambda
        Ident=>LowerIdent@1
        InlineLambdaArrow=>OpArrow@2
        Ident=>LowerIdent@3
    EndLambda)
EndTopLevelDecls)

[=== canfmt below ===]
Expr(Lambda([Ident("abc")], Ident("def")))

[=== formatted below ===]
\abc -> def
