crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__lambda_in_chain_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "\"a string\"\n|> Str.toUtf8\n|> List.map \\byte -> byte + 1\n|> List.reverse\n"
---
(BeginTopLevelDecls
    (*
        HintExpr
        String=>String@0
        InlinePizza=>OpPizza@1
        (* ModuleName=>UpperIdent@2 DotModuleLowerIdent)
        InlinePizza=>OpPizza@4
        (* ModuleName=>UpperIdent@5 DotModuleLowerIdent)
    EndPizza)
    HintExpr
    (BeginLambda
        Ident=>LowerIdent@8
        InlineLambdaArrow=>OpArrow@9
        (*
            (*
                Ident=>LowerIdent@10
                InlineBinOpPlus=>OpPlus@11
                Num=>IntBase10@12
            EndBinOpPlus)
            InlinePizza=>OpPizza@13
            (* ModuleName=>UpperIdent@14 DotModuleLowerIdent)
        EndPizza)
    EndLambda)
EndTopLevelDecls)

[=== canfmt below ===]
Pizza([String("\"a string\""), ModuleLowerName("Str", ".toUtf8"), ModuleLowerName("List", ".map")])
Lambda([Ident("byte")], Pizza([BinOp(Ident("byte"), Plus, IntBase10("1")), ModuleLowerName("List", ".reverse")]))

[=== formatted below ===]

