crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__lambda_indent_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "\\x ->\n  1\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginLambda
            Ident=>LowerIdent@1
            InlineLambdaArrow=>OpArrow@2
            (BeginBlock HintExpr Num=>Int@3 EndBlock)
        EndLambda)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Lambda([Ident("x")], Block([IntBase10("1")]))

[=== formatted below ===]

