crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__leading_comment.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "# hello\nabc\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("abc")

[=== formatted below ===]

