crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__list_closing_indent_not_enough_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "myList = [\n    0,\n    [\n        a,\n        b,\n],\n    1,\n]\n42\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginList
                Num=>IntBase10@3
                (BeginList Ident=>LowerIdent@6 Ident=>LowerIdent@8 EndList)
                Num=>IntBase10@12
            EndList)
        EndAssign)
        HintExpr
        Num=>IntBase10@15
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("myList"), List([IntBase10("0"), List([Ident("a"), Ident("b")]), IntBase10("1")]))
IntBase10("42")

[=== formatted below ===]

