crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__list_closing_same_indent_no_trailing_comma_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "myList = [\n    0,\n    1\n]\n42\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginList Num=>IntBase10@3 Num=>IntBase10@5 EndList)
        EndAssign)
        HintExpr
        Num=>IntBase10@7
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("myList"), List([IntBase10("0"), IntBase10("1")]))
IntBase10("42")

[=== formatted below ===]

